src/objects/Aircraft_Platform_Configuration__c/Aircraft_Platform_Configuration__c.object-meta.xml
<CustomObject>
    <label>Aircraft Platform Standard Configuration</label>
    <nameField>
        <label>LRU Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aircraft Platform Standard Configuration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>