src/objects/Aircraft_Platform_Configuration__c/fields/AIRCRAFT_CLASSIFICATION_CD__c.field-meta.xml
<CustomField>
    <fullName>AIRCRAFT_CLASSIFICATION_CD__c</fullName>
    <label>Aircraft Classification Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Civil Helo</fullName>
            </value>
            <value>
                <fullName>Business Jet</fullName>
            </value>
            <value>
                <fullName>Business Turboprop</fullName>
            </value>
            <value>
                <fullName>Civil Utility</fullName>
            </value>
            <value>
                <fullName>Jet</fullName>
            </value>
            <value>
                <fullName>Marine</fullName>
            </value>
            <value>
                <fullName>Military</fullName>
            </value>
            <value>
                <fullName>Military Combat</fullName>
            </value>
            <value>
                <fullName>Military Combat Helo</fullName>
            </value>
            <value>
                <fullName>Military Ground Vehicle</fullName>
            </value>
            <value>
                <fullName>Military Helo</fullName>
            </value>
            <value>
                <fullName>Military Missiles</fullName>
            </value>
            <value>
                <fullName>Military Special Mission</fullName>
            </value>
            <value>
                <fullName>Military Trainer</fullName>
            </value>
            <value>
                <fullName>Military Transport</fullName>
            </value>
            <value>
                <fullName>Military Utility Helo</fullName>
            </value>
            <value>
                <fullName>Regional Turboprop</fullName>
            </value>
            <value>
                <fullName>Space</fullName>
            </value>
            <value>
                <fullName>Submarine</fullName>
            </value>
            <value>
                <fullName>Tanker</fullName>
            </value>
            <value>
                <fullName>Transport, Single-Aisle</fullName>
            </value>
            <value>
                <fullName>Transport, Twin-Aisle</fullName>
            </value>
            <value>
                <fullName>Turboprop</fullName>
            </value>
            <value>
                <fullName>Helicopter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>