src/objects/Aircraft_Platform_Configuration__c/fields/AIRCRAFT_PART_MODEL_NM__c.field-meta.xml
<CustomField>
    <fullName>AIRCRAFT_PART_MODEL_NM__c</fullName>
    <label>Aircraft Part Model Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>