src/objects/Aircraft_Platform_Configuration__c/fields/AIRCRAFT_PART_NUM__c.field-meta.xml
<CustomField>
    <fullName>AIRCRAFT_PART_NUM__c</fullName>
    <label>LRU Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>