src/objects/Aircraft_Platform_Configuration__c/fields/AVEL_MECH_IND__c.field-meta.xml
<CustomField>
    <fullName>AVEL_MECH_IND__c</fullName>
    <label>AVEL Mechanical Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Avionics</fullName>
            </value>
            <value>
                <fullName>GP-402</fullName>
            </value>
            <value>
                <fullName>Electical</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>