src/objects/Aircraft_Platform_Configuration__c/fields/DESCRIPTION_NM__c.field-meta.xml
<CustomField>
    <fullName>DESCRIPTION_NM__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>