src/objects/Aircraft_Platform_Configuration__c/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <label>Sub System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AHRS/IRS</fullName>
            </value>
            <value>
                <fullName>Air Data</fullName>
            </value>
            <value>
                <fullName>Audio</fullName>
            </value>
            <value>
                <fullName>Autoflight</fullName>
            </value>
            <value>
                <fullName>Comm/Nav</fullName>
            </value>
            <value>
                <fullName>Connector Kit</fullName>
            </value>
            <value>
                <fullName>Displays</fullName>
            </value>
            <value>
                <fullName>EGPWS</fullName>
            </value>
            <value>
                <fullName>Epic</fullName>
            </value>
            <value>
                <fullName>Epic Comm/Nav</fullName>
            </value>
            <value>
                <fullName>Epic Core</fullName>
            </value>
            <value>
                <fullName>FMS</fullName>
            </value>
            <value>
                <fullName>GP-401</fullName>
            </value>
            <value>
                <fullName>HF</fullName>
            </value>
            <value>
                <fullName>Instruments</fullName>
            </value>
            <value>
                <fullName>Primus 2000</fullName>
            </value>
            <value>
                <fullName>RADAR</fullName>
            </value>
            <value>
                <fullName>SATCOM</fullName>
            </value>
            <value>
                <fullName>Sat TV</fullName>
            </value>
            <value>
                <fullName>Surveillance</fullName>
            </value>
            <value>
                <fullName>TCAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>