src/objects/Aircraft_Platform_Configuration__c/fields/Platform_Name__c.field-meta.xml
<CustomField>
    <fullName>Platform_Name__c</fullName>
    <label>Aircraft Platform</label>
    <referenceTo>Platform__c</referenceTo>
    <relationshipLabel>Aircraft Platform Standard Configuration</relationshipLabel>
    <relationshipName>Aircraft_Platform_Configurations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>