src/objects/Aircraft_Platform_Configuration__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Aircraft Platform Standard Configuration</relationshipLabel>
    <relationshipName>Aircraft_Platform_Standard_Configuration</relationshipName>
    <type>Lookup</type>
</CustomField>