src/objects/Aircraft_Platform_Configuration__c/fields/Secondary__c.field-meta.xml
<CustomField>
    <fullName>Secondary__c</fullName>
    <label>Primary / Secondary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>